Normalisation des images

--- a/TP1_RDF/classif_advanced.ipynb
+++ b/TP1_RDF/classif_advanced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
     "label_ref = []\n",
     "for letter in range(0,10):\n",
     "    for i in range(1,151):\n",
-    "        image_file_name = 'data_resized/' + letter_array[letter] + str(i) + '.bmp'\n",
-    "        image = imageio.imread(image_file_name)\n",
+    "        image_file_name = 'data_resized_2/' + letter_array[letter] + str(i) + '.bmp'\n",
+    "        image = imageio.imread(image_file_name)/255\n",
     "        list_img = array_to_list(image)\n",
     "        base_ref.append(list_img)\n",
     "        label_ref.append(letter_array[letter])\n",
@@ -33,8 +33,8 @@
     "label_val = []\n",
     "for letter in range(0,10):\n",
     "    for i in range(151,201):\n",
-    "        image_file_name = 'data_resized/' + letter_array[letter] + str(i) + '.bmp'\n",
-    "        image = imageio.imread(image_file_name)\n",
+    "        image_file_name = 'data_resized_2/' + letter_array[letter] + str(i) + '.bmp'\n",
+    "        image = imageio.imread(image_file_name)/255\n",
     "        list_img = array_to_list(image)\n",
     "        base_val.append(list_img)\n",
     "        label_val.append(letter_array[letter])\n",
@@ -46,8 +46,8 @@
     "label_test = []\n",
     "for letter in range(0,10):\n",
     "    for i in range(201,251):\n",
-    "        image_file_name = 'data_resized/' + letter_array[letter] + str(i) + '.bmp'\n",
-    "        image = imageio.imread(image_file_name)\n",
+    "        image_file_name = 'data_resized_2/' + letter_array[letter] + str(i) + '.bmp'\n",
+    "        image = imageio.imread(image_file_name)/255\n",
     "        list_img = array_to_list(image)\n",
     "        base_test.append(list_img)\n",
     "        label_test.append(letter_array[letter])\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,32 +149,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(M):\n",
+    "    if len(M)==10:\n",
+    "        letter_array =np.array(['B','C','D','E','F','G','H','I','J','K'])\n",
+    "    else:\n",
+    "        letter_array =np.array(['Nan','B','C','D','E','F','G','H','I','J','K'])\n",
+    "    letter_array = np.reshape(letter_array,(len(M),1))\n",
+    "    acc = np.zeros((len(M),1))\n",
+    "    for i in range(len(M)):\n",
+    "        acc[i,0] = round(M[i,i]/50,2)\n",
+    "    res = np.concatenate((letter_array,acc),axis=1)\n",
+    "    print(res)\n",
+    "    return np.mean(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thoreau/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:11: RuntimeWarning: overflow encountered in ubyte_scalars\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[28  0 12  1  0  3  1  0  1  4]\n",
-      " [ 0 35  1  5  0  8  1  0  0  0]\n",
-      " [10  0 35  0  0  3  1  0  1  0]\n",
-      " [ 1  3  0 38  0  5  0  0  0  3]\n",
-      " [ 1  0  0 11 31  1  0  0  1  5]\n",
-      " [ 1  0  0  2  1 45  0  0  0  1]\n",
-      " [ 1  0  3  0  0  2 35  0  1  8]\n",
-      " [ 3  0  2  3  1  1  1 23 11  5]\n",
-      " [ 0  0  1  1  0  1  1  0 45  1]\n",
-      " [ 0  0  0  1  0  1  0  0  0 48]]\n"
+      "[[37  0  8  4  0  0  0  1  0  0]\n",
+      " [ 0 45  0  4  0  0  0  0  1  0]\n",
+      " [ 1  1 43  0  0  0  0  0  5  0]\n",
+      " [ 0  1  0 47  0  0  0  2  0  0]\n",
+      " [ 0  0  0 32  4  0  0 13  1  0]\n",
+      " [ 6  2  2 30  0  9  0  0  1  0]\n",
+      " [ 6  0  0  5  0  0 37  0  1  1]\n",
+      " [ 0  0  0  1  0  0  0 44  5  0]\n",
+      " [ 0  0  0  0  0  0  0  8 41  1]\n",
+      " [ 2  0  0 21  0  0  1  3  4 19]]\n",
+      "[['B' '0.74']\n",
+      " ['C' '0.9']\n",
+      " ['D' '0.86']\n",
+      " ['E' '0.94']\n",
+      " ['F' '0.08']\n",
+      " ['G' '0.18']\n",
+      " ['H' '0.74']\n",
+      " ['I' '0.88']\n",
+      " ['J' '0.82']\n",
+      " ['K' '0.38']]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.652"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -184,7 +216,9 @@
     "label_red = np.array(letter_array)\n",
     "base_red = base_moyenne(base_ref)[0]\n",
     "\n",
-    "print(confusion_matrix(label_test, label_pred(base_test,base_red,label_red)))"
+    "M_confusion = confusion_matrix(label_test, label_pred(base_test,base_red,label_red))\n",
+    "print(M_confusion)\n",
+    "accuracy(M_confusion)"
    ]
   }
  ],
@@ -204,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
